Spec GameEng et Level fini (normalement)

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -48,6 +48,6 @@ encoding//src/game/tests=UTF-8
 encoding//src/game/tests/BadImplTest.java=UTF-8
 encoding//src/game/tests/GoodImplTest.java=UTF-8
 encoding/<project>=UTF-8
+encoding/Pour_Mr_Nea_alias_expert_codeur.txt=UTF-8
 encoding/Spec=UTF-8
-encoding/a_voir.txt=UTF-8
 encoding/src=UTF-8
